[#97] New approx patient counts editing in Scene overview

--- a/client/assets/css/_variables.scss
+++ b/client/assets/css/_variables.scss
@@ -12,6 +12,7 @@ $orangeAccent: #ee924f;
 /// Text & Icons
 $mainGrey: #3d5058;
 $lowPriorityGrey: #94a6ad;
+$lightGreyBlue: #d8e4ec;
 $red: #eb5757;
 $purple2: #bb6bd9;
 $yellow: #f2c94c;
