--- a/client/dashboard/scenes/new-scene.component.html
+++ b/client/dashboard/scenes/new-scene.component.html
@@ -45,8 +45,8 @@
         <div class="col-md-6">
           <div class="form-group">
             <div class="form-field">
-              <label for="approxPatients" i18n>Approximate Number of Patients</label>
-              <input [(ngModel)]="record.approxPatients" type="number" class="form-control" />
+              <label for="approxPatientsCount" i18n>Approximate Number of Patients</label>
+              <input [(ngModel)]="record.approxPatientsCount" type="number" class="form-control" />
             </div>
           </div>
         </div>
