--- a/client/dashboard/scenes/scene-overview.component.html
+++ b/client/dashboard/scenes/scene-overview.component.html
@@ -6,30 +6,53 @@
       <h1>{{(scene.attributes$|async).name}}</h1>
       <p class="overview__desc">{{(scene.attributes$|async).desc}}</p>
       <!-- <button type="button" class="btn btn-sm btn-primary mr-3" i18n>Transfer Command</button> -->
-      <button *ngIf="(scene.attributes$|async).incidentCommanderId == user.id" (click)="closeConfirmation.open({centered: true, size: 'lg'})" type="button" class="btn btn-sm btn-warning" i18n>Close Scene</button>
-      <button *ngIf="(scene.attributes$|async).incidentCommanderId != user.id && scene.isOnScene(user.id)" (click)="leaveConfirmation.open({centered: true, size: 'lg'})" type="button" class="btn btn-sm btn-warning" i18n>Leave Scene</button>
-      <button *ngIf="(scene.attributes$|async).incidentCommanderId != user.id && !scene.isOnScene(user.id)" routerLink="/scenes" type="button" class="btn btn-sm btn-warning mr-3" i18n>Exit Scene</button>
-      <button *ngIf="(scene.attributes$|async).incidentCommanderId != user.id && !scene.isOnScene(user.id)" (click)="scene.join().subscribe()" type="button" class="btn btn-sm btn-primary" i18n>Join Scene</button>
+      <button *ngIf="scene.isMGS(user.id)" (click)="closeConfirmation.open({centered: true, size: 'lg'})" type="button" class="btn btn-sm btn-warning" i18n>Close Scene</button>
+      <button *ngIf="!scene.isMGS(user.id) && scene.isOnScene(user.id)" (click)="leaveConfirmation.open({centered: true, size: 'lg'})" type="button" class="btn btn-sm btn-warning" i18n>Leave Scene</button>
+      <button *ngIf="!scene.isMGS(user.id) && !scene.isOnScene(user.id)" routerLink="/scenes" type="button" class="btn btn-sm btn-warning mr-3" i18n>Exit Scene</button>
+      <button *ngIf="!scene.isMGS(user.id) && !scene.isOnScene(user.id)" (click)="scene.join().subscribe()" type="button" class="btn btn-sm btn-primary" i18n>Join Scene</button>
       <hr />
-      <h3 i18n>Initial Observations from MGS</h3>
-      <p>Approx # Patients: {{(scene.attributes$|async).approxPatients}}</p>
-      <hr />
-      <h3 i18n># Patients Recorded</h3>
-      <p class="overview__patients-recorded">{{(scene.stats$|async)[0].total}}</p>
-      <hr />
-      <h3 i18n>Recorded Patient States</h3>
-      <div class="priorities">
-        <ng-container *ngFor="let tab of scene.stats$|async; index as i">
-          <div *ngIf="i!=0" [class]="'priority priority-' + i">
-            <div *ngIf="i==1" i18n>Immediate</div>
-            <div *ngIf="i==2" i18n>Delayed</div>
-            <div *ngIf="i==3" i18n>Minimal</div>
-            <div *ngIf="i==4" i18n>Expectant</div>
-            <div *ngIf="i==5" i18n>Dead</div>
-            <div *ngIf="i==6" i18n>Transported</div>
-            {{tab.total > 0 ? tab.total : '-'}}
+      <div class="row">
+        <div class="col-6 border-right">
+          <div class="priorities">
+            <h3 class="mb-3" i18n>Approximate Number<br />of Patients</h3>
+            <ng-container *ngFor="let tab of scene.approxStats$|async; index as i">
+              <div [class]="'priority priority--approx priority--' + i" [class.priority--editable]="scene.isMGS(user.id) || scene.hasRole(user.id, 'TRIAGE') || scene.hasRole(user.id, 'TREATMENT')">
+                <a (click)="scene.decrApproxPatientsCount(i)" class="priority__decr"><i class="peakicon peakicon-minimize"></i></a>
+                <div *ngIf="i==0" class="priority__title" i18n>Total</div>
+                <div *ngIf="i==1" class="priority__title" i18n>Immediate</div>
+                <div *ngIf="i==2" class="priority__title" i18n>Delayed</div>
+                <div *ngIf="i==3" class="priority__title" i18n>Minimal</div>
+                <div *ngIf="i==4" class="priority__title" i18n>Expectant</div>
+                <div *ngIf="i==5" class="priority__title" i18n>Dead</div>
+                <div *ngIf="i==6" class="priority__title" i18n>Transport</div>
+                <div *ngIf="i!=0" class="priority__value">{{tab.total}}</div>
+                <div *ngIf="i==0" class="priority__value">{{(scene.attributes$|async).approxPatientsCount}}</div>
+                <div *ngIf="i==0" class="priority__bottom">
+                  <div class="priority__title" i18n>Total from Triage #s</div>
+                  <div class="priority__value">{{tab.total}}</div>
+                </div>
+                <a (click)="scene.incrApproxPatientsCount(i)" class="priority__incr"><i class="peakicon peakicon-maximize"></i></a>
+              </div>
+            </ng-container>
           </div>
-        </ng-container>
+        </div>
+        <div class="col-4 offset-1">
+          <div class="priorities">
+            <h3 class="mb-3" i18n>Recorded Number<br />of Patients</h3>
+            <ng-container *ngFor="let tab of scene.stats$|async; index as i">
+              <div [class]="'priority priority--' + i">
+                <div *ngIf="i==0" class="priority__title" i18n>Total</div>
+                <div *ngIf="i==1" class="priority__title" i18n>Immediate</div>
+                <div *ngIf="i==2" class="priority__title" i18n>Delayed</div>
+                <div *ngIf="i==3" class="priority__title" i18n>Minimal</div>
+                <div *ngIf="i==4" class="priority__title" i18n>Expectant</div>
+                <div *ngIf="i==5" class="priority__title" i18n>Dead</div>
+                <div *ngIf="i==6" class="priority__title" i18n>Transported</div>
+                <div class="priority__value">{{tab.total}}</div>
+              </div>
+            </ng-container>
+          </div>
+        </div>
       </div>
       <!-- <hr />
       <div class="notes">
@@ -72,58 +95,56 @@
             </div>
           </div>
           <div class="responder__actions">
-            <ng-container *ngIf="(scene.attributes$|async).incidentCommanderId; let incidentCommanderId">
-              <button *ngIf="incidentCommanderId == responder.user.id"
-                      type="button" class="btn btn-xs btn-role btn-role--mgs" disabled>
-                <i class="peakicon peakicon-star"></i><span i18n>Medical Group<br />Supervisor</span>
+            <button *ngIf="scene.isMGS(responder.user.id)"
+                    type="button" class="btn btn-xs btn-role btn-role--mgs" disabled>
+              <i class="peakicon peakicon-star"></i><span i18n>Medical Group<br />Supervisor</span>
+            </button>
+            <div *ngIf="!scene.isMGS(responder.user.id)" ngbDropdown container="body" display="dynamic" placement="bottom-left">
+              <button *ngIf="responder.role" [disabled]="!scene.isMGS(user.id)" ngbDropdownToggle
+                      type="button" [class]="'btn btn-xs btn-role btn-role--highlighted btn-role--' + responder.role.toLowerCase()">
+                <ng-container *ngIf="responder.role == 'STAGING'"><i class="peakicon peakicon-pause"></i><span i18n>Staging Officer</span></ng-container>
+                <ng-container *ngIf="responder.role == 'TRANSPORT'"><i class="peakicon peakicon-transport"></i><span i18n>Transport Officer</span></ng-container>
+                <ng-container *ngIf="responder.role == 'TREATMENT'"><i class="peakicon peakicon-heart"></i><span i18n>Treatment Officer</span></ng-container>
+                <ng-container *ngIf="responder.role == 'TRIAGE'"><i class="peakicon peakicon-check-circle"></i><span i18n>Triage Officer</span></ng-container>
               </button>
-              <div *ngIf="incidentCommanderId != responder.user.id" ngbDropdown container="body" display="dynamic" placement="bottom-left">
-                <button *ngIf="responder.role" [disabled]="incidentCommanderId != user.id" ngbDropdownToggle
-                        type="button" [class]="'btn btn-xs btn-role btn-role--highlighted btn-role--' + responder.role.toLowerCase()">
-                  <ng-container *ngIf="responder.role == 'STAGING'"><i class="peakicon peakicon-pause"></i><span i18n>Staging Officer</span></ng-container>
-                  <ng-container *ngIf="responder.role == 'TRANSPORT'"><i class="peakicon peakicon-transport"></i><span i18n>Transport Officer</span></ng-container>
-                  <ng-container *ngIf="responder.role == 'TREATMENT'"><i class="peakicon peakicon-heart"></i><span i18n>Treatment Officer</span></ng-container>
-                  <ng-container *ngIf="responder.role == 'TRIAGE'"><i class="peakicon peakicon-check-circle"></i><span i18n>Triage Officer</span></ng-container>
-                </button>
-                <button *ngIf="incidentCommanderId == user.id && !responder.role" ngbDropdownToggle
-                        type="button" class="btn btn-xs btn-outline-primary">
-                  <span i18n>Assign Role</span>
-                </button>
-                <div *ngIf="incidentCommanderId == user.id" ngbDropdownMenu [class]="'dropdown-menu btn-role-dropdown' + (responder.role ? ' btn-role--' + responder.role.toLowerCase() : '')">
-                  <div class="btn-role-dropdown__bg">
-                    <div class="d-flex align-items-center">
-                      <button *ngIf="responder.role == 'TRIAGE'" (click)="onToggle(responder, null)" ngbDropdownItem type="button" class="btn-role--remove"><i class="peakicon peakicon-remove"></i></button>
-                      <button ngbDropdownItem (click)="onToggle(responder, 'TRIAGE')" type="button" class="btn btn-xs btn-role btn-role--triage" [class.btn-role--highlighted]="responder.role == 'TRIAGE'">
-                        <i class="peakicon peakicon-check-circle"></i><span i18n>Triage<br />Officer</span>
-                      </button>
-                    </div>
-                    <div class="d-flex align-items-center">
-                      <button *ngIf="responder.role == 'TREATMENT'" (click)="onToggle(responder, null)" ngbDropdownItem type="button" class="btn-role--remove"><i class="peakicon peakicon-remove"></i></button>
-                      <button ngbDropdownItem (click)="onToggle(responder, 'TREATMENT')" type="button" class="btn btn-xs btn-role btn-role--treatment" [class.btn-role--highlighted]="responder.role == 'TREATMENT'">
-                        <i class="peakicon peakicon-heart"></i><span i18n>Treatment<br />Officer</span>
-                      </button>
-                    </div>
-                    <div class="d-flex align-items-center">
-                      <button *ngIf="responder.role == 'STAGING'" (click)="onToggle(responder, null)" ngbDropdownItem type="button" class="btn-role--remove"><i class="peakicon peakicon-remove"></i></button>
-                      <button ngbDropdownItem (click)="onToggle(responder, 'STAGING')" type="button" class="btn btn-xs btn-role btn-role--staging" [class.btn-role--highlighted]="responder.role == 'STAGING'">
-                        <i class="peakicon peakicon-pause"></i><span i18n>Staging<br />Officer</span>
-                      </button>
-                    </div>
-                    <div class="d-flex align-items-center">
-                      <button *ngIf="responder.role == 'TRANSPORT'" (click)="onToggle(responder, null)" ngbDropdownItem type="button" class="btn-role--remove"><i class="peakicon peakicon-remove"></i></button>
-                      <button ngbDropdownItem (click)="onToggle(responder, 'TRANSPORT')" type="button" class="btn btn-xs btn-role btn-role--transport" [class.btn-role--highlighted]="responder.role == 'TRANSPORT'">
-                        <i class="peakicon peakicon-transport"></i><span i18n>Transport<br />Officer</span>
-                      </button>
-                    </div>
+              <button *ngIf="scene.isMGS(user.id) && !responder.role" ngbDropdownToggle
+                      type="button" class="btn btn-xs btn-outline-primary">
+                <span i18n>Assign Role</span>
+              </button>
+              <div *ngIf="scene.isMGS(user.id)" ngbDropdownMenu [class]="'dropdown-menu btn-role-dropdown' + (responder.role ? ' btn-role--' + responder.role.toLowerCase() : '')">
+                <div class="btn-role-dropdown__bg">
+                  <div class="d-flex align-items-center">
+                    <button *ngIf="responder.role == 'TRIAGE'" (click)="onToggle(responder, null)" ngbDropdownItem type="button" class="btn-role--remove"><i class="peakicon peakicon-remove"></i></button>
+                    <button ngbDropdownItem (click)="onToggle(responder, 'TRIAGE')" type="button" class="btn btn-xs btn-role btn-role--triage" [class.btn-role--highlighted]="responder.role == 'TRIAGE'">
+                      <i class="peakicon peakicon-check-circle"></i><span i18n>Triage<br />Officer</span>
+                    </button>
+                  </div>
+                  <div class="d-flex align-items-center">
+                    <button *ngIf="responder.role == 'TREATMENT'" (click)="onToggle(responder, null)" ngbDropdownItem type="button" class="btn-role--remove"><i class="peakicon peakicon-remove"></i></button>
+                    <button ngbDropdownItem (click)="onToggle(responder, 'TREATMENT')" type="button" class="btn btn-xs btn-role btn-role--treatment" [class.btn-role--highlighted]="responder.role == 'TREATMENT'">
+                      <i class="peakicon peakicon-heart"></i><span i18n>Treatment<br />Officer</span>
+                    </button>
+                  </div>
+                  <div class="d-flex align-items-center">
+                    <button *ngIf="responder.role == 'STAGING'" (click)="onToggle(responder, null)" ngbDropdownItem type="button" class="btn-role--remove"><i class="peakicon peakicon-remove"></i></button>
+                    <button ngbDropdownItem (click)="onToggle(responder, 'STAGING')" type="button" class="btn btn-xs btn-role btn-role--staging" [class.btn-role--highlighted]="responder.role == 'STAGING'">
+                      <i class="peakicon peakicon-pause"></i><span i18n>Staging<br />Officer</span>
+                    </button>
+                  </div>
+                  <div class="d-flex align-items-center">
+                    <button *ngIf="responder.role == 'TRANSPORT'" (click)="onToggle(responder, null)" ngbDropdownItem type="button" class="btn-role--remove"><i class="peakicon peakicon-remove"></i></button>
+                    <button ngbDropdownItem (click)="onToggle(responder, 'TRANSPORT')" type="button" class="btn btn-xs btn-role btn-role--transport" [class.btn-role--highlighted]="responder.role == 'TRANSPORT'">
+                      <i class="peakicon peakicon-transport"></i><span i18n>Transport<br />Officer</span>
+                    </button>
                   </div>
                 </div>
               </div>
-              <button *ngIf="incidentCommanderId == user.id && !responder.role && responder.user.id != incidentCommanderId"
-                      (click)="transferConfirmation.show(responder, {centered: true, size: 'lg'})"
-                      type="button" class="btn btn-xs btn-primary mt-2">
-                <span i18n>Transfer MGS Role</span>
-              </button>
-            </ng-container>
+            </div>
+            <button *ngIf="scene.isMGS(user.id) && !responder.role && !scene.isMGS(responder.user.id)"
+                    (click)="transferConfirmation.show(responder, {centered: true, size: 'lg'})"
+                    type="button" class="btn btn-xs btn-primary mt-2">
+              <span i18n>Transfer MGS Role</span>
+            </button>
           </div>
         </li>
       </ul>
