--- a/client/dashboard/components/active-scenes.component.scss
+++ b/client/dashboard/components/active-scenes.component.scss
@@ -56,6 +56,10 @@
   .scene {
     border-top-left-radius: 0.3125rem;
     border-top-right-radius: 0.3125rem;
+    cursor: inherit;
+    &:hover {
+      background-color: $orangeAccent;
+    }
   }
 }
 
@@ -107,6 +111,16 @@
 
 .scene-actions {
   min-width: 20rem;
+}
+
+.scene-actions__view {
+  @include copy-m-bold;
+  color: $greyPeakBlue;
+  cursor: pointer;
+  text-decoration: underline;
+  &:hover {
+    text-decoration: underline;
+  }
 }
 
 button {
