--- a/client/dashboard/components/main.component.scss
+++ b/client/dashboard/components/main.component.scss
@@ -1,9 +1,10 @@
 :host {
   display: flex;
   flex-direction: column;
-  margin: 0;
   height: 100%;
+  margin: 0;
   min-height: 100%;
+  overflow-y: scroll;
   padding-left: 128px;
   padding-top: 128px;
 }
