--- a/views/admin/layout.ejs
+++ b/views/admin/layout.ejs
@@ -16,7 +16,7 @@
     <% if (locals.head) { %><%- head %><% } %>
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
       <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="/"><%= process.env.APP_NAME %></a>
       <div class="collapse navbar-collapse justify-content-end">
         <% if (currentUser) { %>
