--- a/views/privacy.ejs
+++ b/views/privacy.ejs
@@ -1,6 +1,7 @@
 <%- contentFor('title') %><%= __('privacy.title') %>
 <%- contentFor('head') %>
 <link rel="stylesheet" href="/stylesheets/home.css" />
+<script type="application/javascript" src="/libraries/bootstrap/js/bootstrap.bundle.min.js"></script>
 <%- contentFor('body') %>
 <%- include('_header') %>
 <main role="main">
