--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-md fixed-top<%= locals.top === true ? ' top' : '' %>">
+  <nav class="navbar navbar-expand-lg fixed-top<%= locals.top === true ? ' top' : '' %>">
     <div class="container">
       <a class="navbar-brand" href="/#home"><img src="/images/logo.png" alt="NaT" /></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="ncavbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
