[#103] Add reCAPTCHA to Contact Us form

--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -338,6 +338,12 @@ section .row {
   justify-content: space-between;
 }
 
+.contact__captcha {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1rem;
+}
+
 #story {
   padding-bottom: 0;
 }
