--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
 <script type="application/javascript" src="/libraries/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script type="application/javascript" src="/libraries/smoothscroll/smoothscroll.min.js"></script>
 <script type="application/javascript" src="/scripts/home.js"></script>
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 <% if (process.env.GOOGLE_ANALYTICS_MEASUREMENT_ID) { %>
 <script async src="https://www.googletagmanager.com/gtag/js?id=<%= process.env.GOOGLE_ANALYTICS_MEASUREMENT_ID %>"></script>
 <script>
@@ -180,7 +181,7 @@
             <textarea required class="form-control" id="message" name="message" rows="4"></textarea>
           </div>
         </div>
-        <div class="form-group col-lg-7 offset-lg-1">
+        <div class="form-group col-lg-6 offset-lg-1">
           <div class="form-check">
             <input type="checkbox" class="form-check-input" id="feedback" name="feedback" value="yes">
             <label for="feedback" class="form-check-label">&nbsp;I'm interested in providing feedback on the product.</label>
@@ -190,8 +191,9 @@
             <label for="pilot" class="form-check-label">&nbsp;I'm interested in being part of a pilot program.</label>
           </div>
         </div>
-        <div class="form-group col-lg-3">
-          <button type="submit" class="btn btn-sm btn-block btn-outline-primary">Submit</button>
+        <div class="form-group col-lg-4">
+          <div class="g-recaptcha contact__captcha" data-callback="onRecaptchaCallback" data-sitekey="<%= process.env.GOOGLE_RECAPTCHA_SITE_KEY %>"></div>
+          <button disabled type="submit" class="btn btn-sm btn-block btn-outline-primary">Submit</button>
         </div>
       </form>
     </div>
