--- a/client/onboarding/url.component.html
+++ b/client/onboarding/url.component.html
@@ -12,7 +12,7 @@
               <input #subdomainEl [ngModel]="subdomain" (ngModelChange)="isLoading=true" [app-shared-debounced] (debouncedValueChange)="validate($event)" [class.is-invalid]="!isLoading && !isValid" type="text" class="form-control" name="subdomain" />
             </div>
             <div class="col-md-6 col-lg-5">
-              <input type="text" readonly tabindex="-1" class="form-control-plaintext" value=".peakresponse.net" />
+              <input type="text" readonly tabindex="-1" class="form-control-plaintext" [value]="'.' + baseHost" />
             </div>
           </div>
         </div>
