--- a/client/admin/states/edit-state.component.html
+++ b/client/admin/states/edit-state.component.html
@@ -2,17 +2,26 @@
   <h1 class="h2">Edit State</h1>
 </div>
 <ngb-alert *ngIf="isConfiguring" type="info" [dismissible]="false">
-  <div>{{status || 'Please wait...'}}</div>
-  <div class="text-centered"><app-shared-loader></app-shared-loader></div>
+  <div><app-shared-loader></app-shared-loader> {{status || 'Please wait...'}}</div>
+</ngb-alert>
+<ngb-alert *ngIf="isError" type="danger" [dismissible]="false">
+  <div>{{status}}</div>
 </ngb-alert>
 <div class="row">
-  <app-shared-form *ngIf="id" type="states" [id]="id" class="col-md-3">
+  <app-shared-form #form *ngIf="id" type="states" [hideButtons]="true" [id]="id" class="col-md-3">
     <ng-template let-record="record" let-error="error">
       <fieldset [disabled]="isConfiguring">
         <div class="form-group">
           <label for="name">Name</label>
-          <input [(ngModel)]="record.name" [class.is-invalid]="error.messages|error:'name'" type="text" class="form-control" id="name" name="name">
+          <input [(ngModel)]="record.name" [class.is-invalid]="error.messages|error:'name'" type="text" readonly class="form-control" id="name" name="name">
           <div *ngIf="error.messages|error:'name' as error" class="invalid-feedback">{{error.message}}</div>
+        </div>
+        <div class="form-group">
+          <label for="name">Is configured?</label>
+          <div>
+            <i *ngIf="record.isConfigured" class="fas fa-check-square"></i>
+            <i *ngIf="!record.isConfigured" class="far fa-square"></i>
+          </div>
         </div>
         <div class="form-group">
           <button (click)="onConfigure()" type="button" class="btn btn-primary" i18n>Configure</button>
