--- a/angular/projects/design/src/styles.scss
+++ b/angular/projects/design/src/styles.scss
@@ -1,1 +1,104 @@
-/* You can add global styles to this file, and also import other style files */
+// Bootstrap variable overrides- must come before import of variables below
+$font-family-sans-serif: 'Barlow', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', 'Liberation Sans',
+  sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+$font-weight-semibold: 600;
+
+$h1-font-size: 3rem;
+$h2-font-size: 2.25rem;
+$h3-font-size: 1.5rem;
+$h4-font-size: 1.25rem;
+$h5-font-size: 0.875rem;
+$h6-font-size: 0.675rem;
+
+$headings-font-weight: normal;
+
+$base-000: white;
+$base-100: #f1f5f8;
+$base-300: #cfdde3;
+$base-500: #7e9ca9;
+$base-800: #2f4a56;
+$bases: (
+  '000': $base-000,
+  '100': $base-100,
+  '300': $base-300,
+  '500': $base-500,
+  '800': $base-800,
+);
+
+// Configuration
+@import '~bootstrap/scss/functions';
+@import '~bootstrap/scss/variables';
+@import '~bootstrap/scss/mixins';
+@import '~bootstrap/scss/utilities';
+
+// Layout & components
+@import '~bootstrap/scss/root';
+@import '~bootstrap/scss/reboot';
+@import '~bootstrap/scss/type';
+// @import "~bootstrap/scss/images";
+@import '~bootstrap/scss/containers';
+@import '~bootstrap/scss/grid';
+// @import "~bootstrap/scss/tables";
+// @import "~bootstrap/scss/forms";
+// @import "~bootstrap/scss/buttons";
+// @import "~bootstrap/scss/transitions";
+// @import "~bootstrap/scss/dropdown";
+// @import "~bootstrap/scss/button-group";
+@import '~bootstrap/scss/nav';
+// @import "~bootstrap/scss/navbar";
+// @import "~bootstrap/scss/card";
+// @import "~bootstrap/scss/accordion";
+// @import "~bootstrap/scss/breadcrumb";
+// @import "~bootstrap/scss/pagination";
+// @import "~bootstrap/scss/badge";
+// @import "~bootstrap/scss/alert";
+// @import "~bootstrap/scss/progress";
+// @import "~bootstrap/scss/list-group";
+// @import "~bootstrap/scss/close";
+// @import "~bootstrap/scss/toasts";
+// @import "~bootstrap/scss/modal";
+// @import "~bootstrap/scss/tooltip";
+// @import "~bootstrap/scss/popover";
+// @import "~bootstrap/scss/carousel";
+// @import "~bootstrap/scss/spinners";
+// @import "~bootstrap/scss/offcanvas";
+// @import "~bootstrap/scss/placeholders";
+
+// Helpers
+@import '~bootstrap/scss/helpers';
+
+// Utilities
+@import '~bootstrap/scss/utilities/api';
+
+@mixin h4 {
+  @include font-size($h4-font-size);
+  line-height: 1.75rem;
+}
+
+@mixin h4-semibold {
+  @include h4;
+  font-weight: $font-weight-semibold;
+}
+
+.text-field {
+  border: 2px solid #add7ef;
+  border-radius: 0.5rem;
+
+  label {
+    @include h4-semibold;
+    margin: 0.375rem 0.875rem 0;
+    color: $base-500;
+  }
+
+  input {
+    @include h4-semibold;
+    border: 0;
+    color: $base-800;
+    margin: 0 0.875rem 0.375rem;
+    padding: 0;
+
+    &:focus {
+      outline: none;
+    }
+  }
+}
