More input field work

--- a/angular/projects/design/src/app/inputs.component.html
+++ b/angular/projects/design/src/app/inputs.component.html
@@ -1,2 +1,13 @@
 <h1>Inputs</h1>
-<text-field id="field" name="field" label="Field" [source]="source"></text-field>
+<div class="mb-3">
+  <text-field id="empty" name="empty" label="Empty Field" placeholder="Sample Input" [source]="source" [target]="source"></text-field>
+</div>
+<div class="mb-3">
+  <text-field id="disabled" name="disabled" propertyName="field" label="Disabled Field" [isDisabled]="true" placeholder="Sample Input" [source]="source"></text-field>
+</div>
+<div class="mb-3">
+  <text-field id="readonly" name="readonly" propertyName="field" label="Readonly Field" placeholder="Sample Input" [source]="source"></text-field>
+</div>
+<div class="mb-3">
+  <text-field id="invalid" name="invalid" propertyName="field" label="Invalid Field" [error]="error" placeholder="Sample Input" [source]="source" [target]="source"></text-field>
+</div>
