--- a/angular/projects/design/src/styles.scss
+++ b/angular/projects/design/src/styles.scss
@@ -10,6 +10,36 @@ $h4-font-size: 1.25rem;
 $h5-font-size: 0.875rem;
 $h6-font-size: 0.675rem;
 
+@mixin h3 {
+  @include font-size($h3-font-size);
+  line-height: 2rem;
+}
+
+@mixin h3-semibold {
+  @include h3;
+  font-weight: $font-weight-semibold;
+}
+
+@mixin h4 {
+  @include font-size($h4-font-size);
+  line-height: 1.75rem;
+}
+
+@mixin h4-semibold {
+  @include h4;
+  font-weight: $font-weight-semibold;
+}
+
+@mixin h5 {
+  @include font-size($h5-font-size);
+  line-height: 1.125rem;
+}
+
+@mixin h5-bold {
+  @include h5;
+  font-weight: $font-weight-semibold;
+}
+
 $headings-font-weight: normal;
 
 $base-000: white;
@@ -23,6 +53,34 @@ $bases: (
   '300': $base-300,
   '500': $base-500,
   '800': $base-800,
+);
+
+$brand-primary-100: #e9f6fe;
+$brand-primary-200: #d0e9f6;
+$brand-primary-300: #add7ef;
+$brand-primary-500: #46a5db;
+$brand-primary-600: #2381b6;
+$brand-primary-700: #0d5a86;
+$brand-primary-900: #013d5e;
+$brand-primaries: (
+  '100': $brand-primary-100,
+  '200': $brand-primary-200,
+  '300': $brand-primary-300,
+  '500': $brand-primary-500,
+  '600': $brand-primary-600,
+  '700': $brand-primary-700,
+  '900': $brand-primary-900,
+);
+
+$brand-secondary-300: #ffeddf;
+$brand-secondary-400: #fed2b1;
+$brand-secondary-500: #ee924f;
+$brand-secondary-800: #d7600a;
+$brand-secondaries: (
+  '300': $brand-secondary-300,
+  '400': $brand-secondary-400,
+  '500': $brand-secondary-500,
+  '800': $brand-secondary-800,
 );
 
 // Configuration
@@ -70,18 +128,8 @@ $bases: (
 // Utilities
 @import '~bootstrap/scss/utilities/api';
 
-@mixin h4 {
-  @include font-size($h4-font-size);
-  line-height: 1.75rem;
-}
-
-@mixin h4-semibold {
-  @include h4;
-  font-weight: $font-weight-semibold;
-}
-
 .text-field {
-  border: 2px solid #add7ef;
+  border: 2px solid $brand-primary-300;
   border-radius: 0.5rem;
 
   label {
@@ -91,14 +139,51 @@ $bases: (
   }
 
   input {
-    @include h4-semibold;
+    @include h3-semibold;
+    background-color: white;
     border: 0;
     color: $base-800;
     margin: 0 0.875rem 0.375rem;
     padding: 0;
-
+    &::placeholder,
+    &:disabled {
+      color: $base-300;
+    }
     &:focus {
       outline: none;
     }
   }
+}
+
+.text-field--disabled {
+  border-color: $base-500;
+}
+
+.text-field--focused {
+  border-color: $brand-primary-500;
+  box-shadow: 0 0 0 4px $brand-primary-200;
+
+  label {
+    color: $brand-primary-500;
+  }
+}
+
+.text-field--invalid {
+  border-color: $brand-secondary-500;
+  &.text-field--focused {
+    box-shadow: 0 0 0 4px $brand-secondary-400;
+  }
+
+  label {
+    color: $brand-secondary-500;
+  }
+}
+
+.invalid-feedback {
+  @include h5-bold;
+  color: $brand-secondary-500;
+}
+
+.text-field + .invalid-feedback {
+  margin: 0.25rem 1rem 0;
 }
