--- a/angular/projects/design/src/app/inputs.component.html
+++ b/angular/projects/design/src/app/inputs.component.html
@@ -3,11 +3,11 @@
   <text-field id="empty" name="empty" label="Empty Field" placeholder="Sample Input" [source]="source" [target]="source"></text-field>
 </div>
 <div class="mb-3">
-  <text-field id="disabled" name="disabled" propertyName="field" label="Disabled Field" [isDisabled]="true" placeholder="Sample Input" [source]="source"></text-field>
+  <text-field id="disabled" name="disabled" label="Disabled Field" [isDisabled]="true" placeholder="Sample Input" [source]="source"></text-field>
 </div>
 <div class="mb-3">
-  <text-field id="readonly" name="readonly" propertyName="field" label="Readonly Field" placeholder="Sample Input" [source]="source"></text-field>
+  <text-field id="readonly" name="readonly" label="Readonly Field" placeholder="Sample Input" [source]="source"></text-field>
 </div>
 <div class="mb-3">
-  <text-field id="invalid" name="invalid" propertyName="field" label="Invalid Field" [error]="error" placeholder="Sample Input" [source]="source" [target]="source"></text-field>
+  <text-field id="invalid" name="invalid" label="Invalid Field" [error]="error" placeholder="Sample Input" [source]="source" [target]="source"></text-field>
 </div>
