Add input clear, icons webfont

--- a/angular/projects/design/src/app/app.component.html
+++ b/angular/projects/design/src/app/app.component.html
@@ -3,6 +3,11 @@
     <nav class="col-md-3">
       <ul class="sidebar nav nav-pills flex-column">
         <li class="nav-item">
+          <a [routerLink]="['/icons']" class="nav-link">
+            Icons
+          </a>
+        </li>
+        <li class="nav-item">
           <a [routerLink]="['/inputs']" class="nav-link">
             Inputs
           </a>
