--- a/angular/projects/design/src/app/app.component.html
+++ b/angular/projects/design/src/app/app.component.html
@@ -3,6 +3,11 @@
     <nav class="col-md-3">
       <ul class="sidebar nav nav-pills flex-column">
         <li class="nav-item">
+          <a [routerLink]="['/buttons']" class="nav-link">
+            Buttons
+          </a>
+        </li>
+        <li class="nav-item">
           <a [routerLink]="['/icons']" class="nav-link">
             Icons
           </a>
@@ -30,11 +35,6 @@
         <li>
           <a href="#" class="nav-link">
             Colors
-          </a>
-        </li>
-        <li>
-          <a href="#" class="nav-link">
-            Main Buttons
           </a>
         </li>
         <li>
