--- a/angular/projects/design/src/styles.scss
+++ b/angular/projects/design/src/styles.scss
@@ -83,6 +83,13 @@ $brand-secondaries: (
   '800': $brand-secondary-800,
 );
 
+$btn-border-radius: 0.5rem;
+$btn-border-width: 0.1875rem;
+$btn-font-size: 1.5rem;
+$btn-font-weight: $font-weight-semibold;
+$btn-padding-y: 1rem;
+$btn-padding-x: 1.75rem;
+
 // Configuration
 @import '~bootstrap/scss/functions';
 @import '~bootstrap/scss/variables';
@@ -127,6 +134,89 @@ $brand-secondaries: (
 
 // Utilities
 @import '~bootstrap/scss/utilities/api';
+
+.btn {
+  display: inline-block;
+  align-self: center;
+  font-family: $btn-font-family;
+  font-weight: $btn-font-weight;
+  line-height: $btn-line-height;
+  color: $body-color;
+  text-align: center;
+  text-decoration: if($link-decoration == none, null, none);
+  white-space: $btn-white-space;
+  vertical-align: middle;
+  cursor: if($enable-button-pointers, pointer, null);
+  user-select: none;
+  background-color: transparent;
+  border: $btn-border-width solid transparent;
+  @include button-size($btn-padding-y, $btn-padding-x, $btn-font-size, $btn-border-radius);
+  @include transition($btn-transition);
+
+  &:hover {
+    color: $body-color;
+    text-decoration: if($link-hover-decoration == underline, none, null);
+  }
+
+  .btn--check:focus + &,
+  &:focus {
+    outline: 0;
+    box-shadow: $btn-focus-box-shadow;
+  }
+
+  .btn--check:checked + &,
+  .btn--check:active + &,
+  &:active,
+  &.active {
+    @include box-shadow($btn-active-box-shadow);
+
+    &:focus {
+      @include box-shadow($btn-focus-box-shadow, $btn-active-box-shadow);
+    }
+  }
+
+  &:disabled,
+  &.disabled,
+  fieldset:disabled & {
+    pointer-events: none;
+    opacity: $btn-disabled-opacity;
+    @include box-shadow(none);
+  }
+}
+
+.btn--primary {
+  @include button-variant(
+    $brand-primary-500,
+    $brand-primary-500,
+    white,
+    $brand-primary-600,
+    $brand-primary-600,
+    white,
+    $brand-primary-700,
+    $brand-primary-700,
+    white
+  );
+}
+
+.btn--secondary {
+  @include button-outline-variant(
+    $brand-primary-500,
+    $brand-primary-600,
+    $brand-primary-100,
+    $brand-primary-600,
+    $active-color: $brand-primary-900
+  );
+}
+
+.btn--tertiary {
+  @include button-variant(
+    transparent,
+    transparent,
+    $brand-primary-500,
+    $hover-color: $brand-primary-600,
+    $active-color: $brand-primary-900
+  );
+}
 
 [class^='pr-icon-24-'],
 [class*=' pr-icon-24-'] {
