--- a/angular/projects/design/src/app/buttons.component.html
+++ b/angular/projects/design/src/app/buttons.component.html
@@ -1,10 +1,34 @@
 <h1>Buttons</h1>
-<div class="mb-3">
-  <button class="btn btn--primary">Label</button>
-</div>
-<div class="mb-3">
-  <button class="btn btn--secondary">Label</button>
-</div>
-<div class="mb-3">
-  <button class="btn btn--tertiary">Label</button>
-</div>
+<section>
+  <div class="mb-3">
+    <button class="btn btn--sm btn--primary">Label</button>
+  </div>
+  <div class="mb-3">
+    <button class="btn btn--sm btn--secondary">Label</button>
+  </div>
+  <div class="mb-3">
+    <button class="btn btn--sm btn--tertiary">Label</button>
+  </div>
+</section>
+<section>
+  <div class="mb-3">
+    <button class="btn btn--primary">Label</button>
+  </div>
+  <div class="mb-3">
+    <button class="btn btn--secondary">Label</button>
+  </div>
+  <div class="mb-3">
+    <button class="btn btn--tertiary">Label</button>
+  </div>
+</section>
+<section>
+  <div class="mb-3">
+    <button class="btn btn--lg btn--primary">Label</button>
+  </div>
+  <div class="mb-3">
+    <button class="btn btn--lg btn--secondary">Label</button>
+  </div>
+  <div class="mb-3">
+    <button class="btn btn--lg btn--tertiary">Label</button>
+  </div>
+</section>
