--- a/angular/projects/design/src/styles.scss
+++ b/angular/projects/design/src/styles.scss
@@ -84,11 +84,19 @@ $brand-secondaries: (
 );
 
 $btn-border-radius: 0.5rem;
+$btn-border-radius-lg: $btn-border-radius;
+$btn-border-radius-sm: $btn-border-radius;
 $btn-border-width: 0.1875rem;
 $btn-font-size: 1.5rem;
+$btn-font-size-lg: 2.25rem;
+$btn-font-size-sm: 0.875rem;
 $btn-font-weight: $font-weight-semibold;
 $btn-padding-y: 1rem;
 $btn-padding-x: 1.75rem;
+$btn-padding-y-lg: 1.0625rem;
+$btn-padding-x-lg: 1.9375rem;
+$btn-padding-y-sm: 0.5rem;
+$btn-padding-x-sm: 1.125rem;
 
 // Configuration
 @import '~bootstrap/scss/functions';
@@ -216,6 +224,14 @@ $btn-padding-x: 1.75rem;
     $hover-color: $brand-primary-600,
     $active-color: $brand-primary-900
   );
+}
+
+.btn--lg {
+  @include button-size($btn-padding-y-lg, $btn-padding-x-lg, $btn-font-size-lg, $btn-border-radius-lg);
+}
+
+.btn--sm {
+  @include button-size($btn-padding-y-sm, $btn-padding-x-sm, $btn-font-size-sm, $btn-border-radius-sm);
 }
 
 [class^='pr-icon-24-'],
