--- a/angular/projects/design/src/app/buttons.component.html
+++ b/angular/projects/design/src/app/buttons.component.html
@@ -1,5 +1,6 @@
 <h1>Buttons</h1>
 <section>
+  <h2>Small Buttons</h2>
   <div class="mb-3">
     <button class="btn btn--sm btn--primary">Label</button>
   </div>
@@ -11,6 +12,7 @@
   </div>
 </section>
 <section>
+  <h2>Medium Buttons</h2>
   <div class="mb-3">
     <button class="btn btn--primary">Label</button>
   </div>
@@ -22,6 +24,7 @@
   </div>
 </section>
 <section>
+  <h2>Large Buttons</h2>
   <div class="mb-3">
     <button class="btn btn--lg btn--primary">Label</button>
   </div>
