Refactor into shared library project

--- a/angular/projects/design/src/app/inputs.component.html
+++ b/angular/projects/design/src/app/inputs.component.html
@@ -1,13 +1,13 @@
 <h1>Inputs</h1>
 <div class="mb-3">
-  <text-field id="empty" name="empty" label="Empty Field" placeholder="Sample Input" [source]="source" [target]="source"></text-field>
+  <shared-text-field id="empty" name="empty" label="Empty Field" placeholder="Sample Input" [source]="source" [target]="source"></shared-text-field>
 </div>
 <div class="mb-3">
-  <text-field id="disabled" name="disabled" label="Disabled Field" [isDisabled]="true" placeholder="Sample Input" [source]="source"></text-field>
+  <shared-text-field id="disabled" name="disabled" label="Disabled Field" [isDisabled]="true" placeholder="Sample Input" [source]="source"></shared-text-field>
 </div>
 <div class="mb-3">
-  <text-field id="readonly" name="readonly" label="Readonly Field" placeholder="Sample Input" [source]="source"></text-field>
+  <shared-text-field id="readonly" name="readonly" label="Readonly Field" placeholder="Sample Input" [source]="source"></shared-text-field>
 </div>
 <div class="mb-3">
-  <text-field id="invalid" name="invalid" label="Invalid Field" [error]="error" placeholder="Sample Input" [source]="source" [target]="source"></text-field>
+  <shared-text-field id="invalid" name="invalid" label="Invalid Field" [error]="error" placeholder="Sample Input" [source]="source" [target]="source"></shared-text-field>
 </div>
