--- a/angular/projects/design/src/styles.scss
+++ b/angular/projects/design/src/styles.scss
@@ -143,178 +143,6 @@ $btn-padding-x-sm: 1.125rem;
 // Utilities
 @import '~bootstrap/scss/utilities/api';
 
-.btn {
-  display: inline-block;
-  align-self: center;
-  font-family: $btn-font-family;
-  font-weight: $btn-font-weight;
-  line-height: $btn-line-height;
-  color: $body-color;
-  text-align: center;
-  text-decoration: if($link-decoration == none, null, none);
-  white-space: $btn-white-space;
-  vertical-align: middle;
-  cursor: if($enable-button-pointers, pointer, null);
-  user-select: none;
-  background-color: transparent;
-  border: $btn-border-width solid transparent;
-  @include button-size($btn-padding-y, $btn-padding-x, $btn-font-size, $btn-border-radius);
-  @include transition($btn-transition);
-
-  &:hover {
-    color: $body-color;
-    text-decoration: if($link-hover-decoration == underline, none, null);
-  }
-
-  .btn--check:focus + &,
-  &:focus {
-    outline: 0;
-    box-shadow: $btn-focus-box-shadow;
-  }
-
-  .btn--check:checked + &,
-  .btn--check:active + &,
-  &:active,
-  &.active {
-    @include box-shadow($btn-active-box-shadow);
-
-    &:focus {
-      @include box-shadow($btn-focus-box-shadow, $btn-active-box-shadow);
-    }
-  }
-
-  &:disabled,
-  &.disabled,
-  fieldset:disabled & {
-    pointer-events: none;
-    opacity: $btn-disabled-opacity;
-    @include box-shadow(none);
-  }
-}
-
-.btn--primary {
-  @include button-variant(
-    $brand-primary-500,
-    $brand-primary-500,
-    white,
-    $brand-primary-600,
-    $brand-primary-600,
-    white,
-    $brand-primary-700,
-    $brand-primary-700,
-    white
-  );
-}
-
-.btn--secondary {
-  @include button-outline-variant(
-    $brand-primary-500,
-    $brand-primary-600,
-    $brand-primary-100,
-    $brand-primary-600,
-    $active-color: $brand-primary-900
-  );
-}
-
-.btn--tertiary {
-  @include button-variant(
-    transparent,
-    transparent,
-    $brand-primary-500,
-    $hover-color: $brand-primary-600,
-    $active-color: $brand-primary-900
-  );
-}
-
-.btn--lg {
-  @include button-size($btn-padding-y-lg, $btn-padding-x-lg, $btn-font-size-lg, $btn-border-radius-lg);
-}
-
-.btn--sm {
-  @include button-size($btn-padding-y-sm, $btn-padding-x-sm, $btn-font-size-sm, $btn-border-radius-sm);
-}
-
-[class^='pr-icon-24-'],
-[class*=' pr-icon-24-'] {
-  display: inline-block;
-  font-size: 1.5rem;
-}
-
-.form-field {
-  border: 2px solid $brand-primary-300;
-  border-radius: 0.5rem;
-  position: relative;
-
-  label {
-    @include h4-semibold;
-    margin: 0.375rem 0.875rem 0;
-    color: $base-500;
-  }
-
-  input {
-    @include h3-semibold;
-    background-color: white;
-    border: 0;
-    color: $base-800;
-    margin: 0 0.875rem 0.375rem;
-    padding: 0;
-    &::placeholder,
-    &:disabled {
-      color: $base-300;
-    }
-    &:focus {
-      outline: none;
-    }
-  }
-}
-
-.form-field--disabled {
-  border-color: $base-500;
-}
-
-.form-field--editing {
-  &.form-field--nonempty {
-    &::after {
-      display: block;
-      position: absolute;
-      bottom: 0.125rem;
-      right: 0.5rem;
-      background: transparent
-        url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L5.29289 17.2929ZM18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L18.7071 6.70711ZM6.70711 18.7071L18.7071 6.70711L17.2929 5.29289L5.29289 17.2929L6.70711 18.7071Z' fill='%232F4A56'/%3E%3Cpath d='M6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L6.70711 5.29289ZM17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L17.2929 18.7071ZM5.29289 6.70711L17.2929 18.7071L18.7071 17.2929L6.70711 5.29289L5.29289 6.70711Z' fill='%232F4A56'/%3E%3C/svg%3E%0A")
-        no-repeat center center/1.5rem 1.5rem;
-      content: '';
-      cursor: pointer;
-      height: 2.25rem;
-      width: 2.25rem;
-    }
-  }
-}
-
-.form-field--focused {
-  border-color: $brand-primary-500;
-  box-shadow: 0 0 0 4px $brand-primary-200;
-
-  label {
-    color: $brand-primary-500;
-  }
-}
-
-.form-field--invalid {
-  border-color: $brand-secondary-500;
-  &.form-field--focused {
-    box-shadow: 0 0 0 4px $brand-secondary-400;
-  }
-
-  label {
-    color: $brand-secondary-500;
-  }
-}
-
-.invalid-feedback {
-  @include h5-bold;
-  color: $brand-secondary-500;
-}
-
-.form-field + .invalid-feedback {
-  margin: 0.25rem 1rem 0;
-}
+@import 'styles/buttons';
+@import 'styles/icons';
+@import 'styles/forms';
