--- a/angular/projects/design/src/app/app.component.html
+++ b/angular/projects/design/src/app/app.component.html
@@ -3,6 +3,11 @@
     <nav class="col-md-3">
       <ul class="sidebar nav nav-pills flex-column">
         <li class="nav-item">
+          <a [routerLink]="['/branding']" class="nav-link">
+            Branding
+          </a>
+        </li>
+        <li class="nav-item">
           <a [routerLink]="['/buttons']" class="nav-link">
             Buttons
           </a>
