--- a/angular/projects/design/src/styles/_forms.scss
+++ b/angular/projects/design/src/styles/_forms.scss
@@ -1,4 +1,5 @@
 .form-field {
+  background-color: white;
   border: 2px solid $brand-primary-300;
   border-radius: 0.5rem;
   position: relative;
@@ -14,6 +15,7 @@
     background-color: white;
     border: 0;
     color: $base-800;
+    flex-grow: 1;
     margin: 0 0.875rem 0.375rem;
     padding: 0;
     &::placeholder,
