--- a/views/auth/layout.ejs
+++ b/views/auth/layout.ejs
@@ -12,6 +12,11 @@
     <title><%= locals.title ? `${title} - ` : '' %><%= process.env.APP_NAME %></title>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/libraries/fontawesome/css/all.css" />
+    <% for (let asset of Object.keys(designWebpackStats.assets)) { %>
+      <% if (asset.endsWith('.css')) { %>
+        <link rel="stylesheet" href="<%= designWebpackStats.assets[asset].publicPath %>" />
+      <% } %>
+    <% } %>
     <% for (let asset of Object.keys(webpackStats.assets)) { %>
       <% if (asset.endsWith('.css')) { %>
         <link rel="stylesheet" href="<%= webpackStats.assets[asset].publicPath %>" />
