--- a/angular/projects/auth/src/app/login.component.html
+++ b/angular/projects/auth/src/app/login.component.html
@@ -1,13 +1,15 @@
-<form>
-  <div class="mb-3">
-    <shared-text-field id="email" label="Email" placeholder="jane@firedepartment.gov" [source]="data" [target]="data"></shared-text-field>
-  </div>
-  <div class="mb-5">
-    <shared-text-field id="password" label="Password" placeholder="********" type="password" [source]="data" [target]="data"></shared-text-field>
-  </div>
-  <div class="d-flex flex-column align-items-center">
-    <button class="btn btn--primary w-50 mb-3">Sign In</button>
-    <a class="mb-2">Create New Account</a>
-    <a class="mb-2">Forgot Password</a>
-  </div>
+<form (submit)="onSubmit($event)">
+  <fieldset [disabled]="isLoading">
+    <div class="mb-3">
+      <shared-text-field id="email" label="Email" placeholder="jane@firedepartment.gov" [source]="data" [target]="data"></shared-text-field>
+    </div>
+    <div class="mb-5">
+      <shared-text-field id="password" label="Password" placeholder="********" type="password" [source]="data" [target]="data"></shared-text-field>
+    </div>
+    <div class="d-flex flex-column align-items-center">
+      <button type="submit" [disabled]="!isValid" class="btn btn--primary w-50 mb-3">Sign In</button>
+      <a class="mb-2" href="/sign-up">Create New Account</a>
+      <a class="mb-2">Forgot Password</a>
+    </div>
+  </fieldset>
 </form>
