--- a/angular/projects/design/src/app/buttons.component.html
+++ b/angular/projects/design/src/app/buttons.component.html
@@ -3,35 +3,44 @@
   <h2>Small Buttons</h2>
   <div class="mb-3">
     <button class="btn btn--sm btn--primary">Label</button>
+    <button disabled class="btn btn--sm btn--primary ms-2">Label</button>
   </div>
   <div class="mb-3">
     <button class="btn btn--sm btn--secondary">Label</button>
+    <button disabled class="btn btn--sm btn--secondary ms-2">Label</button>
   </div>
   <div class="mb-3">
     <button class="btn btn--sm btn--tertiary">Label</button>
+    <button disabled class="btn btn--sm btn--tertiary ms-2">Label</button>
   </div>
 </section>
 <section>
   <h2>Medium Buttons</h2>
   <div class="mb-3">
     <button class="btn btn--primary">Label</button>
+    <button disabled class="btn btn--primary ms-2">Label</button>
   </div>
   <div class="mb-3">
     <button class="btn btn--secondary">Label</button>
+    <button disabled class="btn btn--secondary ms-2">Label</button>
   </div>
   <div class="mb-3">
     <button class="btn btn--tertiary">Label</button>
+    <button disabled class="btn btn--tertiary ms-2">Label</button>
   </div>
 </section>
 <section>
   <h2>Large Buttons</h2>
   <div class="mb-3">
     <button class="btn btn--lg btn--primary">Label</button>
+    <button disabled class="btn btn--lg btn--primary ms-2">Label</button>
   </div>
   <div class="mb-3">
     <button class="btn btn--lg btn--secondary">Label</button>
+    <button disabled class="btn btn--lg btn--secondary ms-2">Label</button>
   </div>
   <div class="mb-3">
     <button class="btn btn--lg btn--tertiary">Label</button>
+    <button disabled class="btn btn--lg btn--tertiary ms-2">Label</button>
   </div>
 </section>
