Login error handling

--- a/views/auth/index.ejs
+++ b/views/auth/index.ejs
@@ -1,4 +1,4 @@
-<%- contentFor('title') %>Design
+<%- contentFor('title') %>Sign In
 <%- contentFor('head') %>
 <base href="/auth">
 <script type="text/javascript">
