--- a/angular/projects/auth/src/app/login.component.html
+++ b/angular/projects/auth/src/app/login.component.html
@@ -9,7 +9,7 @@
     <div class="d-flex flex-column align-items-center">
       <button type="submit" [disabled]="!isValid" class="btn btn--primary w-50 mb-3">Sign In</button>
       <a class="mb-2" href="/sign-up">Create New Account</a>
-      <a class="mb-2">Forgot Password</a>
+      <a class="mb-2" routerLink="/forgot-password">Forgot Password</a>
     </div>
   </fieldset>
 </form>
