Setting up new onboarding

--- a/views/onboarding.ejs
+++ b/views/onboarding.ejs
@@ -1,6 +1,6 @@
 <%- contentFor('title') %><%= __('onboarding.title') %>
 <%- contentFor('head') %>
-<base href="/sign-up">
+<base href="/sign-up/old">
 <script type="text/javascript">
   window.env = {};
   window.env.BASE_HOST = '<%= process.env.BASE_HOST %>';
